user update profile first round

--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -1,5 +1,5 @@
 <form action="/user/update/<%= user.id %>" method="POST" class="form-signin">
-	<h2><%= __('Update a user') %></h2>
+	<h2><%= __('Edit your profile') %></h2>
 
 	<input value="<%= user.lastname %>" name="lastname" type="text" class="form-control"/>
 	<input value="<%= user.firstname %>" name="firstname" type="text" class="form-control"/>
