--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -1,12 +1,14 @@
 <div class="container">
 	<h3><%= __('Users') %></h3>
-	<table class='table'>
+	<!-- <div class="table-responsive"> -->
+	<table class='table table-hover table-striped table-condensed'>
 		<tr>
 			<th></th>
 			<th>ID</th>
 			<th><%= __('Lastname') %></th>
 			<th><%= __('Firstname') %></th>
 			<th><%= __('Email') %></th>
+			<th></th>
 			<th></th>
 			<th></th>
 			<th></th>
@@ -38,6 +40,6 @@
 				</td>
 			</tr>
 		<%	}) %>
-
 	</table>
+	<!-- </div> -->
 </div>
