--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -3,6 +3,6 @@
 		<h1><%= __("static_index_title") %></h1>
 
 		<h2><%= __("static_index_content") %></h2>
-		<a href="user/new" class="btn btn-lg btn-success"><%= __("Sign up") %></a>
+		<a href="user/new" class="btn btn-lg btn-primary"><%= __("Sign up") %></a>
 	</div>
 </div>
